--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/openjdk:8.0-node
+      - image: cimg/openjdk:8.0-node
     steps:
       - checkout
 
