--- a/qt/build.xml
+++ b/qt/build.xml
@@ -2,7 +2,7 @@
 <!--
 build.xml - build the Qt/QML parts
 
-Copyright © 2015, 2019 JEDLSoft
+Copyright © 2015, 2019 2021 JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -33,6 +33,7 @@ limitations under the License.
     <!-- Properties that can be overridden -->
     <!-- directories -->
     <property name="build.base"						value="${basedir}"/>
+    <property name="build.js"					value="${build.base}/../js"/>
     <property name="build.export"					value="${build.base}/../export"/>
     <property name="build.output"					value="${build.base}/output"/>
     <property name="build.output.qt"				value="${build.base}/output/qt"/>
@@ -133,6 +134,24 @@ limitations under the License.
         </copy>
     </target>
 
+    <target name="js.minify" depends="" description="">
+        <move file="${build.js}/lib" tofile="${build.js}/lib_org"/>
+        <move file="${build.js}/index.js" tofile="${build.js}/index.js_org"/>
+        <mkdir dir="${build.js}/lib" />
+        <copy todir="${build.js}/lib">
+            <fileset dir="${build.export}/js/dyncode">
+                <include name ="**/*.js"/>
+            </fileset>
+        </copy>
+        <move file="${build.js}/lib/index.js" tofile="${build.js}/index.js"/>
+        <!-- <antcall target="js.original"/>-->
+    </target>
+
+    <target name="js.original" depends="" description="">
+        <move file="${build.js}/lib_org" tofile="${build.js}/lib"/>
+        <move file="${build.js}/index.js_org" tofile="${build.js}/index.js"/>
+    </target>
+
     <target name="test.all" depends="qt.version, filereader" description="Run the unit tests in the qt test framework. Make sure you have Qt 5.4 or later, and it is the first Qt in your path.">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.unittest}" failifexecutionfails="true" failonerror="true">
@@ -157,6 +176,19 @@ limitations under the License.
                 <arg line="NodeunitRun_address.qml"/>
             </exec>
         </sequential>
+    </target>
+    <target name="test.address.minify" depends="qt.version, filereader, js.minify" description="Run the address unit tests in the qt test framework.">
+        <sequential>
+            <exec osfamily="unix" executable="qmlscene" dir="${build.unittest}" failifexecutionfails="true" failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_address.qml"/>
+            </exec>
+            <exec osfamily="windows" executable="qmlscene.exe" dir="${build.unittest}" failifexecutionfails="true"  failonerror="true">
+                <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
+                <arg line="NodeunitRun_address.qml"/>
+            </exec>
+        </sequential>
+        <antcall target="js.original"/>
     </target>
 
     <target name="test.calendar" depends="qt.version, export" description="Run the calendar unit tests in the qt test framework.">
