--- a/qt/build.xml
+++ b/qt/build.xml
@@ -134,7 +134,7 @@ limitations under the License.
         </copy>
     </target>
 
-    <target name="js.minify" depends="" description="">
+    <target name="js.minify" depends= "export" description="Copy minified files from export/ directory">
         <move file="${build.js}/lib" tofile="${build.js}/lib_org"/>
         <move file="${build.js}/index.js" tofile="${build.js}/index.js_org"/>
         <mkdir dir="${build.js}/lib" />
@@ -146,7 +146,7 @@ limitations under the License.
         <move file="${build.js}/lib/index.js" tofile="${build.js}/index.js"/>
     </target>
 
-    <target name="js.original" depends="" description="">
+    <target name="js.original" description="Restore original files">
         <move file="${build.js}/lib_org" tofile="${build.js}/lib"/>
         <move file="${build.js}/index.js_org" tofile="${build.js}/index.js"/>
     </target>
@@ -189,7 +189,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.address.compiled" depends="qt.version, filereader, js.minify" description="Run the address unit tests in the qt test framework.">
+    <target name="test.address.compiled" depends="qt.version, filereader, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.unittest}" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -215,7 +215,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.calendar.compiled" depends="qt.version, export, js.minify" description="Run the calendar unit tests in the qt test framework.">
+    <target name="test.calendar.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -241,7 +241,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.collate.compiled" depends="qt.version, export, js.minify" description="Run the collate unit tests in the qt test framework.">
+    <target name="test.collate.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -267,7 +267,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.ctype.compiled" depends="qt.version, export, js.minify" description="Run the ctype unit tests in the qt test framework.">
+    <target name="test.ctype.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -293,7 +293,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.date.compiled" depends="qt.version, export, js.minify" description="Run the date unit tests in the qt test framework.">
+    <target name="test.date.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -319,7 +319,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.daterange.compiled" depends="qt.version, export, js.minify" description="Run the daterange unit tests in the qt test framework.">
+    <target name="test.daterange.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -345,7 +345,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.durfmt.compiled" depends="qt.version, export" description="Run the durfmt unit tests in the qt test framework.">
+    <target name="test.durfmt.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -371,7 +371,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.maps.compiled" depends="qt.version, export, js.minify" description="Run the maps unit tests in the qt test framework.">
+    <target name="test.maps.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -397,7 +397,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.name.compiled" depends="qt.version, export, js.minify" description="Run the name unit tests in the qt test framework.">
+    <target name="test.name.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -423,7 +423,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.number.compiled" depends="qt.version, export, js.minify" description="Run the number unit tests in the qt test framework.">
+    <target name="test.number.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -449,7 +449,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.phone.compiled" depends="qt.version, export, js.minify" description="Run the phone unit tests in the qt test framework.">
+    <target name="test.phone.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -475,7 +475,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.root.compiled" depends="qt.version, export, js.minify" description="Run the root unit tests in the qt test framework.">
+    <target name="test.root.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -501,7 +501,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.strings_ext.compiled" depends="qt.version, export, js.minify" description="Run the strings_ext unit tests in the qt test framework.">
+    <target name="test.strings_ext.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -527,7 +527,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.units.compiled" depends="qt.version, export, js.minify" description="Run the units unit tests in the qt test framework.">
+    <target name="test.units.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
@@ -553,7 +553,7 @@ limitations under the License.
             </exec>
         </sequential>
     </target>
-    <target name="test.util.compiled" depends="qt.version, export, js.minify" description="Run the util unit tests in the qt test framework.">
+    <target name="test.util.compiled" depends="qt.version, js.minify" description="Run the address unit tests in the qt framework with minified files">
         <sequential>
             <exec osfamily="unix" executable="qmlscene" dir="${build.base}/NodeunitTest" failifexecutionfails="true" failonerror="true">
                 <env key="QML2_IMPORT_PATH" value="../FileReader/imports"/>
