--- a/js/build.xml
+++ b/js/build.xml
@@ -304,9 +304,8 @@ limitations under the License.
             <arg value="${keep.these.comments}"/>
 			<arg value="-o"/>
 			<arg value="${build.output.dyncode}/ilib.js"/>
-			<arg value="--no-mangle-functions"/>
+			<arg value="--keep-fnames"/>
             <arg value="-c"/>
-			<arg value="-v"/>
 		</exec>
 		<exec osfamily="windows" executable="uglifyjs" dir="${build.base}" failifexecutionfails="true">
             <env key="PATH" path="${env.PATH}:${nm.bin}"/>
@@ -315,9 +314,8 @@ limitations under the License.
             <arg value="${keep.these.comments}"/>
             <arg value="-o"/>
 			<arg value="${build.output.dyncode}/ilib.js"/>
-			<arg value="--no-mangle-functions"/>
+			<arg value="--keep-fnames"/>
             <arg value="-c"/>
-			<arg value="-v"/>
 		</exec>
 		<exec osfamily="unix" executable="node" dir="${build.base}" failifexecutionfails="true">
             <env key="PATH" path="${env.PATH}:${nm.bin}"/>
@@ -339,9 +337,9 @@ limitations under the License.
 			<arg value="${keep.these.comments}"/>
             <arg value="-o"/>
 			<targetfile/>
-			<arg value="--no-mangle-functions"/>
+			<arg value="--keep-fnames"/>
             <arg value="-c"/>
-			<arg value="-v"/>
+            <arg value="--verbose"/>
             <fileset dir="${build.lib}">
                 <include name="*.js"/>
                 <exclude name="ilib.js"/>
@@ -367,9 +365,9 @@ limitations under the License.
             <arg value="${keep.these.comments}"/>
             <arg value="-o"/>
 			<targetfile/>
-			<arg value="--no-mangle-functions"/>
+			<arg value="--keep-fnames"/>
 			<arg value="-c"/>
-			<arg value="-v"/>
+			<arg value="--verbose"/>
 			<fileset dir="${build.lib}" includes="*.js"  excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
 			<fileset dir="${build.lib}" includes="ilib-node*.js,ilib-webpack.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
 			<mapper type="glob" from="*.js" to="*.js"/>
