--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "ilib-webpack-plugin": "^1.3.0",
         "iso-15924": "^3.0.1",
         "jsdoc2": "^2.4.0",
+        "json-stable-stringify": "^1.0.1",
         "node-expat": "^2.4.0",
         "nodeunit": "^0.11.0",
         "should": "^13.2.3",
