--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
 
     docker:
       - image: << parameters.docker_image >>
-
+    resource_class: xlarge
+    parallelism: 3
     environment:
       NODE_OPTIONS: "--max-old-space-size=3072"
       TZ: "America/Los_Angeles"
