Trying downloading the google signing key manually

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - run:
           name: Set up ant
           command: |
+		    wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
             sudo apt update
             sudo apt install -y ant
 
