--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
         "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12",
-        "xml2json": "^0.12.0"
+        "xml2json": "^0.12.0",
+        "jsdoc": "^4.0.0"
     },
     "scripts": {
         "test": "ant test.dynamic.uncompiled",
