--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     },
     "devDependencies": {
         "babel-loader": "^8.2.5",
+        "better-docs": "^2.7.2",
         "cldr-cal-ethiopic-full": "^42.0.0",
         "cldr-cal-persian-full": "^42.0.0",
         "cldr-core": "^42.0.0",
@@ -79,7 +80,7 @@
         "ilib-webpack-loader": "^1.3.1",
         "ilib-webpack-plugin": "^1.3.0",
         "iso-15924": "^3.1.0",
-        "jsdoc2": "^2.4.0",
+        "jsdoc": "^4.0.0",
         "json-stable-stringify": "^1.0.1",
         "node-expat": "^2.4.0",
         "nodeunit": "^0.11.0",
@@ -91,8 +92,7 @@
         "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12",
-        "xml2json": "^0.12.0",
-        "jsdoc": "^4.0.0"
+        "xml2json": "^0.12.0"
     },
     "scripts": {
         "test": "ant test.dynamic.uncompiled",
