Update the image tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,8 +65,8 @@ workflows:
       - test:
           docker_image: circleci/node:12-browsers
       - test:
-          docker_image: circleci/node:14-browsers
+          docker_image: cimg/node:14-browsers
       - test:
-          docker_image: circleci/node:16-browsers
+          docker_image: cimg/node:16-browsers
       - test:
-          docker_image: circleci/node:18-browsers
+          docker_image: cimg/node:18-browsers
