No more qt5-default

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: |
             #sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
             #sudo apt update
-            sudo apt install -y build-essential libfontconfig1 mesa-common-dev qmlscene qt5-default qtdeclarative5-dev qtbase5-dev
+            sudo apt install -y build-essential libfontconfig1 mesa-common-dev qtbase5-dev qmlscene qtdeclarative5-dev 
 
       - run:
           name: Set up node packages
